[package]
name = "subimg"
version = "0.3.0"
edition = "2021"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
readme = "README.md"
repository = "https://github.com/pic16f877ccs/subimg"
homepage = "https://github.com/pic16f877ccs/subimg"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]
keywords = ["png", "image", "cli"]
description = """
A tool to hide sub-images in the image, supported image types PNG and TIFF.
"""

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.12", features = ["cargo"] }
image = "0.24.7"
